[gd_scene load_steps=21 format=2]

[ext_resource path="res://Graphics/Sprites/Goods/Tea.png" type="Texture" id=1]
[ext_resource path="res://Objects/Player/Window_information/Information.gd" type="Script" id=2]
[ext_resource path="res://Graphics/Fonts/pixel_2.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Graphics/Styles/DefaultButton.tres" type="Theme" id=4]
[ext_resource path="res://Graphics/Sprites/Goods/Tabaco.png" type="Texture" id=5]
[ext_resource path="res://Graphics/Sprites/Goods/Coal.png" type="Texture" id=6]
[ext_resource path="res://Graphics/Sprites/Goods/Rubber.png" type="Texture" id=7]
[ext_resource path="res://Graphics/Sprites/Goods/Iron.png" type="Texture" id=8]
[ext_resource path="res://Graphics/Sprites/Goods/Wood.png" type="Texture" id=9]
[ext_resource path="res://Graphics/Sprites/Goods/Cotton.png" type="Texture" id=10]
[ext_resource path="res://Graphics/Sprites/Goods/Nitrate.png" type="Texture" id=11]
[ext_resource path="res://Graphics/Sprites/Goods/Oil.png" type="Texture" id=12]
[ext_resource path="res://Graphics/Sprites/Goods/Cattle.png" type="Texture" id=13]
[ext_resource path="res://Graphics/Sprites/Goods/Seed.png" type="Texture" id=14]
[ext_resource path="res://Objects/Player/Window_information/GoodButton.gd" type="Script" id=15]

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.192157, 0.0862745, 0.109804, 1 )

[sub_resource type="DynamicFont" id=1]
size = 32
extra_spacing_char = -2
extra_spacing_space = -7
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 32
extra_spacing_char = -2
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=3]
size = 32
extra_spacing_top = 3
extra_spacing_bottom = 3
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.192157, 0.0862745, 0.109804, 1 )

[node name="Information" type="Panel"]
margin_right = 415.0
margin_bottom = 178.0
mouse_filter = 2
custom_styles/panel = SubResource( 4 )
script = ExtResource( 2 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_right = 415.0
margin_bottom = 196.0
custom_constants/separation = 0

[node name="Label" type="Label" parent="VBoxContainer"]
margin_right = 415.0
margin_bottom = 32.0
custom_fonts/font = SubResource( 1 )
text = "Государство Государство"
align = 1
valign = 1

[node name="Label4" type="Label" parent="VBoxContainer"]
margin_top = 32.0
margin_right = 415.0
margin_bottom = 64.0
custom_fonts/font = SubResource( 2 )
text = "ВВП"
align = 1
valign = 1

[node name="Button_speed" type="Button" parent="VBoxContainer"]
margin_top = 64.0
margin_right = 415.0
margin_bottom = 102.0
theme = ExtResource( 4 )
custom_fonts/font = SubResource( 3 )
text = "Скорость: 1.0"

[node name="Button_pause" type="Button" parent="VBoxContainer"]
margin_top = 102.0
margin_right = 415.0
margin_bottom = 140.0
theme = ExtResource( 4 )
custom_fonts/font = SubResource( 3 )
text = "Пауза"

[node name="EconomyOrPolicy" type="Button" parent="VBoxContainer"]
margin_top = 140.0
margin_right = 415.0
margin_bottom = 178.0
theme = ExtResource( 4 )
custom_fonts/font = SubResource( 3 )
button_mask = 3
text = "show_name_of_region"

[node name="Panel" type="Panel" parent="."]
margin_left = 415.0
margin_right = 830.0
margin_bottom = 47.0
custom_styles/panel = SubResource( 5 )

[node name="Label2" type="Label" parent="."]
margin_left = 415.0
margin_right = 830.0
margin_bottom = 46.0
custom_fonts/font = SubResource( 2 )
text = "Игровое время"
align = 1
valign = 1

[node name="Goods" type="GridContainer" parent="."]
visible = false
margin_left = 415.0
margin_top = 47.0
margin_right = 830.0
margin_bottom = 178.0
custom_constants/vseparation = 0
custom_constants/hseparation = 0
columns = 6

[node name="GoodButton" type="Button" parent="Goods"]
margin_right = 70.0
margin_bottom = 66.0
size_flags_horizontal = 3
size_flags_vertical = 3
icon = ExtResource( 6 )
expand_icon = true
script = ExtResource( 15 )
good = "coal"

[node name="GoodButton2" type="Button" parent="Goods"]
margin_left = 70.0
margin_right = 139.0
margin_bottom = 66.0
size_flags_horizontal = 3
size_flags_vertical = 3
icon = ExtResource( 8 )
expand_icon = true
script = ExtResource( 15 )
good = "iron"

[node name="GoodButton3" type="Button" parent="Goods"]
margin_left = 139.0
margin_right = 208.0
margin_bottom = 66.0
size_flags_horizontal = 3
size_flags_vertical = 3
icon = ExtResource( 11 )
expand_icon = true
script = ExtResource( 15 )
good = "saltpeter"

[node name="GoodButton4" type="Button" parent="Goods"]
margin_left = 208.0
margin_right = 277.0
margin_bottom = 66.0
size_flags_horizontal = 3
size_flags_vertical = 3
icon = ExtResource( 12 )
expand_icon = true
script = ExtResource( 15 )
good = "oil"

[node name="GoodButton5" type="Button" parent="Goods"]
margin_left = 277.0
margin_right = 346.0
margin_bottom = 66.0
size_flags_horizontal = 3
size_flags_vertical = 3
icon = ExtResource( 14 )
expand_icon = true
script = ExtResource( 15 )
good = "grain"

[node name="GoodButton6" type="Button" parent="Goods"]
margin_left = 346.0
margin_right = 415.0
margin_bottom = 66.0
size_flags_horizontal = 3
size_flags_vertical = 3
icon = ExtResource( 13 )
expand_icon = true
script = ExtResource( 15 )
good = "beasts"

[node name="GoodButton7" type="Button" parent="Goods"]
margin_top = 66.0
margin_right = 70.0
margin_bottom = 131.0
size_flags_horizontal = 3
size_flags_vertical = 3
icon = ExtResource( 7 )
expand_icon = true
script = ExtResource( 15 )
good = "rubber"

[node name="GoodButton8" type="Button" parent="Goods"]
margin_left = 70.0
margin_top = 66.0
margin_right = 139.0
margin_bottom = 131.0
size_flags_horizontal = 3
size_flags_vertical = 3
icon = ExtResource( 9 )
expand_icon = true
script = ExtResource( 15 )
good = "wood"

[node name="GoodButton9" type="Button" parent="Goods"]
margin_left = 139.0
margin_top = 66.0
margin_right = 208.0
margin_bottom = 131.0
size_flags_horizontal = 3
size_flags_vertical = 3
icon = ExtResource( 10 )
expand_icon = true
script = ExtResource( 15 )
good = "cotton"

[node name="GoodButton10" type="Button" parent="Goods"]
margin_left = 208.0
margin_top = 66.0
margin_right = 277.0
margin_bottom = 131.0
size_flags_horizontal = 3
size_flags_vertical = 3
icon = ExtResource( 1 )
expand_icon = true
script = ExtResource( 15 )
good = "tea"

[node name="GoodButton11" type="Button" parent="Goods"]
margin_left = 277.0
margin_top = 66.0
margin_right = 346.0
margin_bottom = 131.0
size_flags_horizontal = 3
size_flags_vertical = 3
icon = ExtResource( 5 )
expand_icon = true
script = ExtResource( 15 )
good = "tabaco"

[connection signal="pressed" from="VBoxContainer/Button_speed" to="." method="change_speed_of_game"]
[connection signal="pressed" from="VBoxContainer/Button_pause" to="." method="update_pause"]
[connection signal="pressed" from="VBoxContainer/EconomyOrPolicy" to="." method="change_showing_map"]
